unpackaged/main/default/objects/BLND_DFDT_Project__c/BLND_DFDT_Project__c.object-meta.xml
<CustomObject>
	<label>DreamTeam Project2</label>
	<nameField>
		<label>Project Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamTeam Projects</pluralLabel>
	<sharingModel>Private</sharingModel>
</CustomObject>