unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Archive__c.field-meta.xml
<CustomField>
	<fullName>BLND_Archive__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Archive</label>
	<type>Checkbox</type>
</CustomField>