unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Complete__c.field-meta.xml
<CustomField>
	<fullName>BLND_Complete__c</fullName>
	<label>Complete</label>
	<precision>3</precision>
	<scale>0</scale>
	<type>Percent</type>
</CustomField>