unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Complete_Tasks__c.field-meta.xml
<CustomField>
	<fullName>BLND_Complete_Tasks__c</fullName>
	<label>Complete Tasks</label>
	<precision>3</precision>
	<scale>0</scale>
	<type>Percent</type>
</CustomField>