unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Cost__c.field-meta.xml
<CustomField>
	<fullName>BLND_Cost__c</fullName>
	<label>Cost</label>
	<precision>18</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>