unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Duration_In_Business_Days__c.field-meta.xml
<CustomField>
	<fullName>BLND_Duration_In_Business_Days__c</fullName>
	<label>Duration In Business Days</label>
	<precision>12</precision>
	<scale>2</scale>
	<type>Number</type>
</CustomField>