unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Folder_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Folder_Link__c</fullName>
	<label>Folder Link</label>
	<length>40</length>
	<type>Text</type>
</CustomField>