unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Priority__c.field-meta.xml
<CustomField>
	<fullName>BLND_Priority__c</fullName>
	<label>Priority</label>
	<type>TextArea</type>
</CustomField>