unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Revenue_Baseline__c.field-meta.xml
<CustomField>
	<fullName>BLND_Revenue_Baseline__c</fullName>
	<label>Revenue Baseline</label>
	<precision>18</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>