unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Start__c.field-meta.xml
<CustomField>
	<fullName>BLND_Start__c</fullName>
	<label>Start Date</label>
	<type>DateTime</type>
</CustomField>