unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Test_Field__c.field-meta.xml
<CustomField>
	<fullName>BLND_Test_Field__c</fullName>
	<label>Test Field</label>
	<length>255</length>
	<type>Text</type>
</CustomField>