unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Type__c.field-meta.xml
<CustomField>
	<fullName>BLND_Type__c</fullName>
	<label>Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Professional Services</fullName>
			</value>
			<value>
				<fullName>Product Development</fullName>
			</value>
			<value>
				<fullName>Event Planning</fullName>
			</value>
			<value>
				<fullName>Marketing Campaign</fullName>
			</value>
			<value>
				<fullName>Sales Campaign</fullName>
			</value>
			<value>
				<fullName>Technical Support</fullName>
			</value>
			<value>
				<fullName>Customer Engagement</fullName>
			</value>
			<value>
				<fullName>Sales Operations</fullName>
			</value>
			<value>
				<fullName>Sales Infrastructure</fullName>
			</value>
			<value>
				<fullName>Shared Infrastructure</fullName>
			</value>
			<value>
				<fullName>Web Development</fullName>
			</value>
			<value>
				<fullName>Customer Success Campaign</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>