unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Work_In_Actual_Hours__c.field-meta.xml
<CustomField>
	<fullName>BLND_Work_In_Actual_Hours__c</fullName>
	<label>Work In Actual Hours</label>
	<precision>12</precision>
	<scale>2</scale>
	<type>Number</type>
</CustomField>