unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/BLND_Workday_List__c.field-meta.xml
<CustomField>
	<fullName>BLND_Workday_List__c</fullName>
	<label>Workday List</label>
	<length>32000</length>
	<type>LongTextArea</type>
</CustomField>