unpackaged/main/default/objects/BLND_DFDT_Project__c/fields/My_new_field__c.field-meta.xml
<CustomField>
	<fullName>My_new_field__c</fullName>
	<label>My new field</label>
	<length>80</length>
	<type>Text</type>
</CustomField>